--- a/CheckersDemo/Client/wwwroot/css/main.scss
+++ b/CheckersDemo/Client/wwwroot/css/main.scss
@@ -48,17 +48,44 @@ $white-cell: #fff6bd;
     width: 80%;
     height: 80%;
     cursor: pointer;
+    position: relative;
 
     &-white {
         background-color: #fff;
+
+        &::before {
+            color: #000;
+            border-color: #000;
+        }
     }
 
     &-black {
         background-color: #4f4f4f;
+
+        &::before {
+            color: #fff;
+            border-color: #fff;
+        }
     }
 
-    &-active{
+    &-active {
         box-shadow: 0 0 0 3px green;
+    }
+
+    &-king {
+        &::before {
+            content: "";
+            width: 55px;
+            height: 55px;
+            display: block;
+            position: absolute;
+            transform: translate(-50%, -51%);
+            top: 50%;
+            left: 50%;
+            border-width: 2px;
+            border-style: solid;
+            border-radius: 50%;
+        }
     }
 }
 
