--- a/CheckersDemo/Client/wwwroot/css/main.scss
+++ b/CheckersDemo/Client/wwwroot/css/main.scss
@@ -13,19 +13,19 @@ $white-cell: #fff6bd;
         justify-content: flex-start;
 
         &:nth-child(2n) {
-            .board__col:nth-child(2n+1) {
+            .board__cell:nth-child(2n+1) {
                 background: $black-cell;
             }
         }
 
         &:nth-child(2n+1) {
-            .board__col:nth-child(2n) {
+            .board__cell:nth-child(2n) {
                 background: $black-cell;
             }
         }
     }
 
-    &__col {
+    &__cell {
         border: 1px solid silver;
         margin: 0 0 -1px -1px;
         width: 80px;
@@ -47,7 +47,6 @@ $white-cell: #fff6bd;
     border: 1px solid #868686;
     width: 80%;
     height: 80%;
-    cursor: pointer;
     position: relative;
 
     &-white {
@@ -66,6 +65,18 @@ $white-cell: #fff6bd;
             color: #fff;
             border-color: #fff;
         }
+    }
+
+    &-enabled {
+        &::after {
+            content: "E";
+            display: block;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            top: 50%;
+            left: 50%;
+        }
+        cursor: pointer;
     }
 
     &-active {
